@@ -19,7 +19,7 @@ BIBINPUTS=$srcdir/tests; export BIBINPUTS
 
 rc=0
 
-if [ "$(expr substr $(uname -s) 1 5)" == "MINGW" ]; then
+if [ "$(expr substr $(uname -s) 1 5)" = "MINGW" ]; then
   echo "*** skip test $0 on MinGW"
   exit 77
 fi
