@@ -1,3 +1,8 @@
+2023-08-30  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* tests/{bibtex8u-mem,bibtexu-char}.test:
+	Tweak for portability.
+
 2023-08-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* bibtex.c, sysdep.h: Avoid compiler warnings on Windows.
